tests/snapshots/examples_fixtures/type_system__failing__182_list_comprehension_missing_left_arrow.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E031]: EXPECTED EXPRESSION

Expected expression, found <-.

  --> examples/type_system/failing/182_list_comprehension_missing_left_arrow.flx:1:15
  |
1 | let xs = [x | <- [1, 2, 3]]
  |               ^^
== stdout ==
<not executed>
